Fixed incorrectly hidden navigation menu icons on narrow screens.
git-svn-id: https://plugins.svn.wordpress.org/hide-admin-icons/trunk@570624 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/fufi-hide-admin-icons.css
+++ b/fufi-hide-admin-icons.css
@@ -8,6 +8,12 @@
 	display: inline;
 }
 
+@media only screen and (max-width:900px) {
+	#adminmenu .wp-menu-image {
+		display: inline;
+	}	
+}
+
 /* Hide the page title icons */
 
 .icon32 {
